Fix copyright alignment

--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -48,6 +48,7 @@
     color: var(--primary-color-3);
     font-family: var(--inf-font);
     margin-top: 1rem;
+    text-align: center;
 }
 
 @media (max-width: 700px) {
